[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/underground/inventory_item.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 0.882353, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="InventoryItem" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
expand = true
stretch_mode = 5
script = ExtResource( 1 )

[node name="Selected" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_InventoryItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InventoryItem_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_InventoryItem_pressed"]
